# sbs_hack_2023

./: README.md
.github/workflows/: build.yml
client/: .env.defaults  .eslintrc.cjs  package.json  vite.config.ts
client/src/: App.tsx  MapDemo.tsx
client/src/components/FeaturesForm/: FeaturesForm.tsx
client/src/components/MyMap/: MyMap.tsx
client/src/components/OlMap/: Map.tsx
client/src/components/OlMap/Controls/: Controls.tsx  FullScreenControl.tsx  index.ts
client/src/components/OlMap/Layers/: Layers.tsx  TileLayer.tsx  VectorLayer.tsx  index.ts
client/src/components/OlMap/Source/: vector.ts  xyz.ts
client/src/components/ProcessButton/: ProcessButton.tsx
client/src/components/ProjectTable/: ProjectTable.tsx
client/src/services/: co2Storage.ts
local-containers/: .gitignore  001-init.sh  start.sh
server/: Dockerfile  main.py  process.py  pyproject.toml  writeraster.py
server/scripts/: poetry_scripts.py
server/server/: fetch.py  sentinel2.py  utils.py
