[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = []

packages = [
    { include="scripts" },
    { include="server" },
]



[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
rasterio = "^1.3.6"
shapely = "^2.0.1"
numpy = "^1.24.2"
affine = "^2.4.0"
pyproj = "^3.4.1"
utm = "^0.7.0"
pystac-client = "^0.6.1"
tqdm = "^4.65.0"
pydantic-geojson = "^0.0.4"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
format = "scripts.poetry_scripts:run_formatter"
test = "scripts.poetry_scripts:run_tests"
test-watch = "scripts.poetry_scripts:watch_tests"
dev = "scripts.poetry_scripts:run_server_development"
prod = "scripts.poetry_scripts:run_server_production"
